--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "main": "main.js",
   "dependencies": {
+    "@picocss/pico": "^1.5.7",
     "acorn": "^8.8.2",
     "acorn-walk": "^8.2.0",
     "ansi-regex": "^5.0.1",
